[metadata]
name = bibat
url = https://github.com/teddygroves/mbag
download_url = https://pypi.org/project/mbag
author = Teddy Groves
author_email = tedgro@dtu.dk
version = 0.0.5
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Information Analysis
license = GNU General Public License version 3
description = Medium-sized Bayesian Analysis Generator
long_description = file: README.rst
keywords =

# [mypy]
# plugins = pydantic.mypy
# ignore_missing_imports = true
# follow_imports = skip
# strict_optional = true


[options]
zip_safe = True
include_package_data = True
install_requires =
    pip >= 20
    cookiecutter
    click
    pydantic
python_requires = >=3.7
packages = bibat

[options.entry_points]
console_scripts =
    bibat = bibat.cli:main

[options.extras_require]
development =
    black
    isort
    pytest
    tox
    sphinx
    sphinx-click
    pydata_sphinx_theme

[bdist_wheel]
universal = 1
