[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.repo_name}}"
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]
version = "0.0.1"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "arviz",
    "cmdstanpy",
    "jupyter",
    "numpy",
    "pandas",
    "pandera@git+https://github.com/unionai-oss/pandera.git@pydantic-v2",
    "pydantic >= 2.0.0",
    "pyspark",
    "scipy",
    "scikit-learn",
    "toml",
    {%- if cookiecutter.create_tests_directory == 'y' %}    "pytest",
    "black",{%- endif -%}
    {%- if cookiecutter.docs_format == 'Sphinx' -%}"sphinx",{%- endif -%}
]

[tool.setuptools]
packages = ["{{cookiecutter.repo_name}}"]

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "80"
