[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball"
authors = [
    {name = "Teddy Groves", email = "author@email.com"},
]
version = "0.0.1"
description = "Comparison of distributions for modelling baseball hitting"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "arviz",
    "cmdstanpy",
    "jupyter",
    "numpy",
    "pandas",
    "pandera",
    "pydantic",
    "scipy",
    "scikit-learn",
    "toml",]

[tool.setuptools]
packages = ["baseball"]

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "80"
